tests/valid_programs/loops/for_loop_infered_multi_ref.duck
fn take_array_ref(a: &&&&&Int[]) {
    for (i in a.iter()) {
    }
}

fn take_array_mut(a: &mut &&& &mut Int[]) {
    for (i in a.iter()) {
    }
}

fn main() {
    take_array_ref(&&&&&[]);
    take_array_ref(&mut &&& &mut []);
}
