tests/errors/references/array_nested_mut_method_call_mut_ref.duck
struct S {} impl { mut fn m() {} }

fn main() {
    const arr = [&[&mut S {}]];
    arr[0][0].m();
}
